# KTrace

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Image.cpp  Image.h  ImageTexture.cpp  ImageTexture.h  Intensity.cpp  Intensity.h  IntensityBlend.cpp  IntensityBlend.h  Intersection.h  LightSource.h  Material.cpp  Material.h  Mesh.h  MyOBJLoader.h  MyOpenGLWindow.cpp  MyOpenGLWindow.h  MyVector3.cpp  MyVector3.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  SmoothLightSource.cpp  SmoothLightSource.h  SolidTexture.cpp  SolidTexture.h  Sphere.cpp  Sphere.h  Surface.cpp  Surface.h  (+13 more)
lib/Eigen/src/Core/: CoreEvaluators.h
lib/obj-loader/: OBJ_Loader.h
lib/stb/: stb_image.h
res/: bmw27_cpu.mtl  exporttest.mtl  texture.mtl  untitled.obj.old  uvmaptest.mtl
res/classroom/classroom/: classroom.mtl  classroom2.mtl
src/: Config.h
src/core/common/: Interface.cpp  Interface.h  Intersection.cpp  Intersection.h  LightSource.h  MyVector3.cpp  MyVector3.h  mytypes.cpp  mytypes.h
src/core/engine/: Camera.cpp  Camera.h  CameraMove.cpp  CameraMove.h  Image.cpp  Image.h  ImageTexture.cpp  ImageTexture.h  Material.cpp  Material.h  Scene.cpp  Scene.h  SceneObject.h  Scenes.cpp  Scenes.h  SingleSceneObject.cpp  SingleSceneObject.h  SolidTexture.cpp  SolidTexture.h  Texture.h  TextureManager.h
src/core/engine/materials/: DebugMaterial.cpp  DebugMaterial.h  Dielectric.cpp  Dielectric.h  Image.cpp  Image.h  ImageTexture.cpp  ImageTexture.h  Manager.cpp  Manager.h  Material.cpp  Material.h  Metal.cpp  Metal.h  Phong.cpp  Phong.h  PhongLegacy.cpp  PhongLegacy.h  Shading.cpp  Shading.h  SolidTexture.cpp  SolidTexture.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
src/core/geometry/: AABB.cpp  AABB.h  BVH.cpp  BVH.h  CubicBezier.cpp  CubicBezier.h  Hittable.h  Lerp.cpp  Lerp.h  Mesh.cpp  Objects.cpp  Objects.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Spline.cpp  Spline.h  Surface.cpp  Surface.h  Triangle.cpp  Triangle.h
src/core/interface/: MyOBJLoader.h  MyOpenGLWindow.cpp  MyOpenGLWindow.h  MySDLWindow.cpp  MySDLWindow.h
src/core/light/: Color.cpp  Intensity.cpp  Intensity.h  IntensityBlend.cpp  IntensityBlend.h  SmoothLightSource.cpp  SmoothLightSource.h
